# cosmic-matrix

./: CLAUDE.md  Cargo.toml  README.md  justfile
data/: com.cosmic.CosmicMatrix.desktop  com.cosmic.CosmicMatrix.metainfo.xml
i18n/en/: cosmic_matrix.ftl
src/: app.rs  config.rs  main.rs  message.rs
src/matrix/: client.rs  mod.rs  sync.rs  timeline.rs  verification.rs
src/state/: mod.rs  rooms.rs  timeline.rs
src/ui/: colors.rs  composer.rs  login.rs  mod.rs  profile.rs  room_header.rs  timeline.rs  verification.rs
